Fixed video page overflow bug

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -82,6 +82,10 @@ ________/\\\\\\\\\_____/\\\\\\\\\\\_______/\\\\\\\\\\\___
      margin-top: 125px;
 }
 
+.videoListMargin {
+     margin-right: 1%;
+}
+
 /*? ============= Contact Page ============= */
 
 .contactHeaderText {
